<?xml version="1.0"?>
<package format="3">
  <name>my_pkg</name>
  <version>1.0.0</version>
  <description>Test</description>
  <maintainer email="test@test.com">Test</maintainer>
  <license>BSD</license>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
